--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">YrvynCalugay-Block4-Quiz</string>
+    <string name="app_name">Rex-Navarro-BLOCK4-QUIZ</string>
 </resources>
